--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Cyber Security Researcher &amp; Web Developer</h3>
           <p class="font-italic">
-            Undergraduate with Specialized in Cyber Security, Love Linux, Curious about Technology, Learning Red
+            Cyber Security Gradguate, Love Linux, Curious about Technology, Learning Red
             Teaming, Bug Hunter and Cyber Security Researcher.
           </p>
           <div class="row">
@@ -118,7 +118,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="count-box">
             <i class="icofont-simple-smile"></i>
-            <span data-toggle="counter-up">4</span>
+            <span data-toggle="counter-up">7+</span>
             <p>Happy Clients</p>
           </div>
         </div>
@@ -126,7 +126,7 @@
         <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">7</span>
+            <span data-toggle="counter-up">17</span>
             <p>Projects</p>
           </div>
         </div>
@@ -134,7 +134,7 @@
         <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="icofont-live-support"></i>
-            <span data-toggle="counter-up">100</span>
+            <span data-toggle="counter-up">100+</span>
             <p>Hours Of Support</p>
           </div>
         </div>
