--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="">CTF</a></h4>
-            <p>Curious to play CTF and Learn New Thigns Gradgually, like Scanning, Enumuration, Privilege Escalation,
+            <p>Curious to play CTF and Learn New things Gradgually, like Scanning, Enumeration, Privilege Escalation,
               Exploitation, Post Exploitation and Removing Footprint :)</p>
           </div>
         </div>
@@ -537,7 +537,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
             <h4><a href="">Offensive Security</a></h4>
-            <p>Love to play with Security, finding a loopholes Report/Exploit them Ethically Using a Framework like Red
+            <p>Love to play with Security, finding loopholes Report/Exploit them Ethically Using a Framework like Red
               Teaming, Social Engineering and Attack Surface Reduction</p>
           </div>
         </div>
@@ -553,7 +553,7 @@
       <div class="section-title">
         <h2>Certifications & Badges</h2>
         <p>My Certifications and Badges</p>
-        <small>Visit my Linkedin Profile for Letest Certifications</small>
+        <small>Visit my Linkedin Profile for Latest Certifications</small>
       </div>
 
       <div class="row">
