--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
       <div class="section-title">
         <h2>Certifications & Badges</h2>
         <p>My Certifications and Badges</p>
-        <small>Visit my Linkedin Profile for Latest Certifications</small>
+        <small>Visit my LinkedIn profile for Latest Certifications</small>
       </div>
 
       <div class="row">
@@ -587,13 +587,29 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
+            <img src="img/Cert/CEH_2E345519D3F7.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Certified Ethical Hacker</h4>
+              <p>EC-Council</p>
+              <div class="portfolio-links">
+                <a href="img/Cert/CEH_2E345519D3F7.png" data-gall="portfolioGallery" class="venobox"
+                  title="Certified Ethical Hacker"><i class="bx bx-plus"></i></a>
+                <a href="CEH_2E345519D3F7.png" target="_blank"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
             <img src="img/Cert/Specialization 2.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Introduction to CyberSecurity</h4>
               <p>Cyber Security Specialization</p>
               <div class="portfolio-links">
                 <a href="img/Cert/Specialization 2.png" data-gall="portfolioGallery" class="venobox"
-                  title="Cyber Security Specialization from Tondon School of Engineering NewYork"><i
+                  title="Cyber Security Specialization from Tandon School of Engineering NewYork"><i
                     class="bx bx-plus"></i></a>
                 <a href="https://coursera.org/share/5510d46a2eb6a6e99c30c5f24905204a" target="_blank"><i
                     class="bx bx-link"></i></a>
