--- a/index.html
+++ b/index.html
@@ -587,22 +587,6 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="img/Cert/CEH_2E345519D3F7.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Certified Ethical Hacker</h4>
-              <p>EC-Council</p>
-              <div class="portfolio-links">
-                <a href="img/Cert/CEH_2E345519D3F7.png" data-gall="portfolioGallery" class="venobox"
-                  title="Certified Ethical Hacker"><i class="bx bx-plus"></i></a>
-                <a href="CEH_2E345519D3F7.png" target="_blank"><i
-                    class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
             <img src="img/Cert/Specialization 2.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Introduction to CyberSecurity</h4>
@@ -871,6 +855,23 @@
           </div>
         </div>
 
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="img/Cert/CEH_2E345519D3F7.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Certified Ethical Hacker</h4>
+              <p>EC-Council</p>
+              <div class="portfolio-links">
+                <a href="img/Cert/CEH_2E345519D3F7.png" data-gall="portfolioGallery" class="venobox"
+                  title="Certified Ethical Hacker"><i class="bx bx-plus"></i></a>
+                <a href="img/Cert/CEH_2E345519D3F7.png" target="_blank"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <img src="img/Cert/B_IBM .png" class="img-fluid" alt="">
