--- a/index.html
+++ b/index.html
@@ -855,18 +855,17 @@
           </div>
         </div>
 
-        
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <img src="img/Cert/CEH_2E345519D3F7.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Certified Ethical Hacker</h4>
               <p>EC-Council</p>
               <div class="portfolio-links">
-                <a href="img/Cert/CEH_2E345519D3F7.png" data-gall="portfolioGallery" class="venobox"
-                  title="Certified Ethical Hacker"><i class="bx bx-plus"></i></a>
-                <a href="img/Cert/CEH_2E345519D3F7.png" target="_blank"><i
-                    class="bx bx-link"></i></a>
+                <a href="img/Cert/CEH_2E345519D3F7.png" data-gall="portfolioGallery" class="venobox" title="CEH Badge"><i
+                    class="bx bx-plus"></i></a>
+                <a href="img/Cert/CEH_2E345519D3F7.png"
+                  target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
