--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
 
       <h1><a href="index.html">Viral Parmar</a></h1>
-      <h2>I'm Cyber Security <span>Researcher</span> from भारत</h2>
+      <h2>I'm Cyber Security <span>Consultant</span> from भारत</h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -43,14 +43,13 @@
           <li><a href="#cert">Certification</a></li>
           <li><a href="#journey">Journey</a></li>
           <li><a href="#services">Services</a></li>
+          <li><a href="https://drive.google.com/file/d/1_HeqAyna2Y3Qlxx91jccvBbydi3Oq5Sw/view?usp=drivesdk" target="_blank">CV</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
         <a href="https://twitter.com/vral_parmar" target="_blank" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://www.facebook.com/parmar.viral.37" target="_blank" class="facebook"><i
-            class="icofont-facebook"></i></a>
         <a href="https://instagram.com/vral_parmar" target="_blank" class="instagram"><i
             class="icofont-instagram"></i></a>
         <a href="https://www.linkedin.com/in/viralparmar93/" target="_blank" class="linkedin"><i
@@ -76,71 +75,34 @@
           <img src="img/Viral.jpeg" class="img-fluid" alt="Viral Parmar">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Cyber Security Researcher &amp; Web Developer</h3>
+          <h3>Cyber Security Consultant</h3>
           <p class="font-italic">
-            Cyber Security Gradguate, Love Linux, Curious about Technology, Learning Red
-            Teaming, Bug Hunter and Cyber Security Researcher.
+            Currently, I'm actively honing my skills in the realm of red teaming, pushing boundaries to identify and exploit vulnerabilities before malicious actors can. This relentless pursuit of knowledge extends to bug hunting and security research, where I contribute to a safer digital landscape by uncovering previously unknown weaknesses.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> vral-parmar.github.io/vral_parmar
+                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://vral-parmar.github.io/vral_parmar">Portfolio</a>
                 </li>
-
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bhavnagar, Gujarat, India</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Blog:</strong> Logimp.wordpress.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Blog:</strong> <a href="https://Logimp.wordpress.com">LogIMP</a></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
 
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BTech - CSE with Specialized in CyberSecurity</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> parmarviral93@gmail.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
               </ul>
             </div>
           </div>
           <p>
-            Individuals with a strong Analytical Mindset and a Solid Background in Cyber Security, Perform Vulnerability
-            Assessment and Pentesting. Making sure that Risks are Assessed, Evaluated & Proper actions have been taken
-            to limit their Impact on the Information & Information System.
+           Honed skills through participation in Capture the Flag (CTF) competitions, achieving top 1% ranking on TryHackMe and HackerRank on HackTheBox, demonstrating advanced penetration testing capabilities.
           </p>
         </div>
       </div>
 
     </div><!-- End About Me -->
-
-    <!-- ======= Counts ======= -->
-    <div class="counts container">
-
-      <div class="row">
-
-        <div class="col-lg-4 col-md-6">
-          <div class="count-box">
-            <i class="icofont-simple-smile"></i>
-            <span data-toggle="counter-up">7+</span>
-            <p>Happy Clients</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
-          <div class="count-box">
-            <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">17</span>
-            <p>Projects</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="icofont-live-support"></i>
-            <span data-toggle="counter-up">100+</span>
-            <p>Hours Of Support</p>
-          </div>
-        </div>
-      </div>
-
-    </div><!-- End Counts -->
 
     <!-- ======= Skills  ======= -->
     <div class="skills container">
@@ -154,7 +116,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Vulnerability Assessment <i class="val">70%</i></span>
+            <span class="skill">Vulnerability Assessment<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -162,7 +124,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Penetration Testing <i class="val">60%</i></span>
+            <span class="skill">Penetration Testing <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -170,7 +132,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Web development <i class="val">75%</i></span>
+            <span class="skill">Application security testing <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -178,9 +140,9 @@
           </div>
 
           <div class="progress">
-            <span class="skill">IOT - IIOT <i class="val">45%</i></span>
+            <span class="skill">Cloud/Server Configuration audit <i class="val">45%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -198,7 +160,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Risk Assessment <i class="val">60%</i></span>
+            <span class="skill">Risk Assessment <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -206,17 +168,17 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Networking <i class="val">55%</i></span>
+            <span class="skill">Network Penetration testing <i class="val">88%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Laravel <i class="val">60%</i></span>
+            <span class="skill">Red Team Engagement <i class="val">60%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -238,7 +200,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line" style="color: #ffbb2c;"></i>
-            <h3>Web Development</h3>
+            <h3>Threat Landscape</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -274,7 +236,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-            <h3>IOT - IIOT</h3>
+            <h3>Hardening Audits</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -286,25 +248,25 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-anchor-line" style="color: #b2904f;"></i>
-            <h3>Social Engineering</h3>
+            <h3>Social Engineering Assessment</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-disc-line" style="color: #b20969;"></i>
-            <h3>Music</h3>
+            <h3>Exploitation</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-base-station-line" style="color: #ff5828;"></i>
-            <h3>Python</h3>
+            <h3>Programming Languages</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-            <h3>Footprinting</h3>
+            <h3>Network Footprinting</h3>
           </div>
         </div>
       </div>
@@ -326,83 +288,85 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
+            <h4>Bachelor of Technology - CSE with Specialized in Cyber Security</h4>
+            <h5>2018 - 2021</h5>
+            <p><em>Rashtriya Raksha University, Gujarat, IN</em></p>
+            <p>My academic background is firmly rooted in cybersecurity, with a focus on information security, vulnerability assessment, and penetration testing (VAPT).  Through coursework and four major projects, I've gained a comprehensive understanding of cybersecurity principles and practical skills in identifying and exploiting vulnerabilities.</p>
+          </div>
+          <div class="resume-item">
             <h4>Diploma in Computer Engineering</h4>
             <h5>2015 - 2018</h5>
             <p><em>Gujarat Technological University, Gujarat, IN</em></p>
-            <p>Academics are mostly focused on Programming, Basic Understanding of Computer, Networking and Internet, Majorly Done 2
-              Project</p>
-          </div>
-          <div class="resume-item">
-            <h4>Bachelor of Technology - Computer Science & Engineering with Specialization in Cyber Security</h4>
-            <h5>2018 - 2021</h5>
-            <p><em>Rashtriya Raksha University, Gujarat, IN</em></p>
-            <p>Acadmics are mostly Focused on Cyber Security, Information Security and Vulnerability Assessment and Penetration Testing, majorly done 4 Project
-              During Academic Years i also Participate in 2 Hackathon which result Runner-up in one.</p>
+            <p>Focused on programming, computer fundamentals, networking, internet concepts, and completed two major projects.</p>
           </div>
           <h3 class="resume-title">Projects</h3>
           <div class="resume-item">
-            <h4>Blink</h4>
-            <p><em>Diploma Engineering Academic Project</em></p>
-            <p>Simple Web application which engage user with Questions and Answer.</p>
-          </div>
-          <div class="resume-item">
-            <h4>ViraLHezard</h4>
-            <p><em>Self Interest Project</em></p>
-            <p>Basic android Application for my Blog.</p>
-          </div>
-          <div class="resume-item">
-            <h4>HireTruck</h4>
-            <p><em>Hackathon Project</em></p>
-            <p>Basic Web Application to solve Logistic Problems.</p>
+            <h4>Ekansh</h4>
+            <p><em>Self interest Report generation tool</em></p>
+            <p>Increased reporting efficiency by developing a Flask-based automation tool that generates security reports from Nessus raw data. This tool streamlined data analysis (cleaning, transformation) and report generation, resulting in 95% faster delivery of high quality security reports</p>
           </div>
           <div class="resume-item">
             <h4>Banner Grabbing tools For Recon</h4>
-            <p><em>Self Interest Project</em></p>
-            <p>Simple Python script which scan Host and show Banner of the System.</p>
-          </div>
-          <div class="resume-item">
-            <h4>Miss Universe</h4>
-            <p><em>Team Project</em></p>
-            <p>Beautiful Web Application for local Competition.</p>
+            <p><em>Self Interest Script</em></p>
+            <p>A simple Python script that scans a host and retrieves the system's banner. This script performs a network scan to identify the host and then displays relevant information about the system, such as the operating system and version details, by capturing the banner data.</p>
           </div>
           <div class="resume-item">
             <h4>E-Netra</h4>
             <p><em>Hackthon Project</em></p>
-            <p>Smart devide for Blind People to Nevigate them propperly using AI&ML</p>
+            <p>Developed an intelligent device for blind individuals, leveraging AI and ML technologies to assist with navigation. This project aims to enhance mobility and independence for the visually impaired by providing real-time guidance and obstacle detection.</p>
+          </div>
+          <div class="resume-item">
+            <h4>Twitter Bot</h4>
+            <p><em>Self interest Script</em></p>
+            <p>Developed a Twitter bot to automate hashtag monitoring, resulting in improved 95% social media intelligence gathering for STF WB. This bot effectively tracks and identifies relevant tweets based on pre-defined hashtags.</p>
+          </div>
+          <div class="resume-item">
+            <h4>NS-Lookup Script</h4>
+            <p><em>Self Interest Script</em></p>
+            <p>Developed a Python script capable of querying 10,000 domains to perform NS-Lookup, efficiently retrieving and processing DNS records for each domain..</p>
           </div>
           <div class="resume-item">
             <h4>Attendance System</h4>
             <p><em>Subject Assignment</em></p>
-            <p>Very Interactive Attencance system for University.</p>
+            <p>Developed an interactive attendance system for a university, enhancing the efficiency of tracking and managing student attendance through user-friendly interfaces and automated processes. This system streamlines the attendance process, providing real-time data and comprehensive reporting capabilities.</p>
           </div>
           <div class="resume-item">
             <h4>ERP System</h4>
             <p><em>Freelancing Project</em></p>
-            <p>Very Interactive ERP which have rich functionality like Attendance system, Academic Management System and
-              Exam Management system for Rashtriya Raksha University.</p>
-          </div>
-          <div class="resume-item">
-            <h4>Twitter Bot</h4>
-            <p><em>Self interest Project</em></p>
-            <p>user friendly python script for Retweet and like specific hashtag Post on Twitter</p>
-          </div>
-          <div class="resume-item">
-            <h4>NS-Lookup Script</h4>
-            <p><em>Self Interest Project</em></p>
-            <p>Python Script who Query 10000 Domain to get NS-Lookup.</p>
+            <p>Developed an interactive ERP system for Rashtriya Raksha University, featuring a comprehensive suite of functionalities including an attendance system, academic management system, and exam management system.</p>
           </div>
           <div class="resume-item">
             <h4>Audio Recognition Using Flask</h4>
             <p><em>Self Interest Project</em></p>
-            <p>Flask Application who convert Audio into Text and Text into Audio.</p>
+            <p>Built a web app using Flask for audio-to-text and text-to-speech conversion.</p>
+          </div>
+          <div class="resume-item">
+            <h4>Blink</h4>
+            <p><em>Diploma Engineering Academic Project</em></p>
+            <p>A user-engaging web application featuring an interactive question and answer platform. This application allows users to participate actively by answering various questions, fostering an engaging and dynamic user experience.</p>
+          </div>
+          <div class="resume-item">
+            <h4>ViraLHezard</h4>
+            <p><em>Self Interest Project</em></p>
+            <p>A basic Android application for my blog reader, enabling users to access my content conveniently on their mobile devices.</p>
+          </div>
+          <div class="resume-item">
+            <h4>HireTruck</h4>
+            <p><em>Hackathon Project</em></p>
+            <p>We developed a basic web application aimed at addressing logistical challenges by facilitating tasks such as finding trucks and labor while fostering healthy competition to ensure fair pricing.</p>
+          </div>
+          <div class="resume-item">
+            <h4>Miss Universe</h4>
+            <p><em>Team Project</em></p>
+            <p>Designed and developed a stunning web application for a local group competition, showcasing creativity and functionality to create an appealing online platform..</p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Vulnerability Assessment and Penetration Testing - Intern</h4>
-            <h5>Dec - 2020 - Jan 2021</h5>
-            <p><em>Amigo INC, Ahemedabad, Gujarat, IN </em></p>
+            <h4>CyberSecurity Execuive</h4>
+            <h5>Jun 2021 - Present</h5>
+            <p><em>TCG Digital Solutions, Kolkata, WB, IN </em></p>
             <p>
               <ul>
                 <li>Perform VAPT on various Public Websites</li>
@@ -415,8 +379,8 @@
           </div>
           <div class="resume-item">
             <h4>Information Security Analyst - Intern</h4>
-            <h5>Jan 2021 - Present</h5>
-            <p><em>TCG Digital Pvt,LTD, Kolkata, IN</em></p>
+            <h5>Jan 2021 - Jun 2021</h5>
+            <p><em>TCG Digital Solutions, Kolkata, WB, IN</em></p>
             <p>
               <ul>
                 <li>Perfom Vulnerability Assessment on Various Critical Public Infrastructure</li>
