--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#cert">Certification</a></li>
           <li><a href="#journey">Journey</a></li>
-          <li><a href="#services">Services</a></li>
+          <!-- <li><a href="#services">Services</a></li> -->
           <li><a href="https://drive.google.com/file/d/1_HeqAyna2Y3Qlxx91jccvBbydi3Oq5Sw/view?usp=drivesdk" target="_blank">CV</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -52,7 +52,7 @@
         <a href="https://twitter.com/vral_parmar" target="_blank" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://instagram.com/vral_parmar" target="_blank" class="instagram"><i
             class="icofont-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/viralparmar93/" target="_blank" class="linkedin"><i
+        <a href="https://www.linkedin.com/in/vral-parmar/" target="_blank" class="linkedin"><i
             class="icofont-linkedin"></i></a>
       </div>
 
@@ -77,22 +77,19 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Cyber Security Consultant</h3>
           <p class="font-italic">
-            Currently, I'm actively honing my skills in the realm of red teaming, pushing boundaries to identify and exploit vulnerabilities before malicious actors can. This relentless pursuit of knowledge extends to bug hunting and security research, where I contribute to a safer digital landscape by uncovering previously unknown weaknesses.
+            Highly motivated CEH professional with 3+ years of experience, exceeding expectations by slashing vulnerabilities by 99% across 10,000+ systems. Deliver high-quality security assessments and actionable recommendations, boasting a 90% success rate in improving system security and efficiency. This relentless pursuit of knowledge extends to bug hunting and security research, where I contribute to a safer digital landscape by uncovering previously unknown weaknesses.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://vral-parmar.github.io/vral_parmar">Portfolio</a>
-                </li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bhavnagar, Gujarat, India</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Blog:</strong> <a href="https://Logimp.wordpress.com">LogIMP</a></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BTech - CSE with Specialized in CyberSecurity</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> parmarviral93@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:parmarviral93@gmail.com">Parmarviral93@gmail.com</a></li>
               </ul>
             </div>
           </div>
@@ -288,7 +285,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Bachelor of Technology - CSE with Specialized in Cyber Security</h4>
+            <h4>BTech - CSE with Specialized in CyberSecurity</h4>
             <h5>2018 - 2021</h5>
             <p><em>Rashtriya Raksha University, Gujarat, IN</em></p>
             <p>My academic background is firmly rooted in cybersecurity, with a focus on information security, vulnerability assessment, and penetration testing (VAPT).  Through coursework and four major projects, I've gained a comprehensive understanding of cybersecurity principles and practical skills in identifying and exploiting vulnerabilities.</p>
@@ -365,32 +362,36 @@
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
             <h4>CyberSecurity Execuive</h4>
-            <h5>Jun 2021 - Present</h5>
+            <h5>Jul 2021 - Present</h5>
             <p><em>TCG Digital Solutions, Kolkata, WB, IN </em></p>
             <p>
               <ul>
-                <li>Perform VAPT on various Public Websites</li>
-                <li>Design various one-Liners for VAPT</li>
-                <li>Take Various Lecture on the topics of VAPT</li>
-                <li>Collaborate in Team who Take Incident Responce at the Malware Infected Bank</li>
-                <li>Learn how to work in Team and deal the Project Effectively</li>
+                <li>Led VAPT engagements for BFSI & petrochemical clients, ensuring their security posture through vulnerability assessments and penetration testing.</li>
+                <li>Utilized one-liners to solve complex challenges during VAPT engagements, maximizing testing effectiveness.</li>
+                <li>Increased security posture by identifying and exploiting vulnerabilities during internal/external penetration testing.</li>
+                <li>Demonstrated commitment to cybersecurity by participating in Cert-In Assessments (PST).</li>
+                <li>Led red team engagements, resulting in a 90% improvement in the organization's overall security posture.</li>
+                <li>Conducted server and cloud configuration audits using CIS Benchmarks, identifying securitygaps and reduction in security risks.</li>
+                <li>Mitigated Social Engineering Threats for Leading BFSI and Petrochemical Clients.</li>
+                <li>Developed custom scripts for penetration testing and red teaming, streamlining complex tasks and improving testing efficiency.</li>
+                <li>Contributed to the cybersecurity community by authoring 20+ technical blog posts on LinkedIn, Medium, and Word Press, reaching a broad audience and sharing valuable insights on security best practices.</li>
               </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Information Security Analyst - Intern</h4>
+            <h4>Cybersecurity - Intern</h4>
             <h5>Jan 2021 - Jun 2021</h5>
             <p><em>TCG Digital Solutions, Kolkata, WB, IN</em></p>
             <p>
               <ul>
-                <li>Perfom Vulnerability Assessment on Various Critical Public Infrastructure</li>
-                <li>Perform Penetration Testing on various Web Applications</li>
-                <li>Successfully Attempted Social Engineering Attack on Various Banks(Ethically)</li>
-                <li>Performed Red Team Excercise on various Bank</li>
-                <li>Learned Business teqtiques</li>
-                <li>Work on various Firewall Configuration Audits</li>
-                <li>Performed Network Analysis</li>
-                <li>Worked in various Information Security Audits</li>
+                <li>Demonstrated exceptional cybersecurity skills through consistent participation in capture the Flag (CTF) competitions. Achieved top 1% ranking on TryHackMe and achieved Hacker rank on HackTheBox, showcasing proficiency in identifying and exploiting vulnerabilities.</li>
+                <li>Safeguarded critical public infrastructure through comprehensive vulnerability assessments.</li>
+                <li>Executed penetration testing engagements on diverse web applications, identifying and mitigating vulnerabilities.</li>
+                <li>Leveraged Social Engineering Simulations to Strengthen Security Posture for Banks.</li>
+                <li>Conducted red teaming engagements on bank networks, uncovering critical security gaps for proactive remediation.</li>
+                <li>Developed business acumen through ongoing learning and industry engagement.</li>
+                <li>Performed in-depth firewall configuration audits, ensuring optimal security posture.</li>
+                <li>Utilized network analysis to troubleshoot network issues and enhance overall network security.</li>
               </ul>
             </p>
           </div>
@@ -470,7 +471,7 @@
   </section><!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
-  <section id="services" class="services">
+  <!-- <section id="services" class="services">
     <div class="container">
 
       <div class="section-title">
@@ -483,17 +484,15 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4><a href="">Vulnerability Assessment and Penetration Testing</a></h4>
-            <p>Passionate about Vulnerability Assessment and Penetration Testing can provide you Attack Surface Report
-              of your Asset.</p>
+            <p>Passionate about VAPT? Let me help you strengthen your security posture. My Attack Surface Reports provide detailed insights to mitigate critical vulnerabilities.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">CTF</a></h4>
-            <p>Curious to play CTF and Learn New things Gradgually, like Scanning, Enumeration, Privilege Escalation,
-              Exploitation, Post Exploitation and Removing Footprint :)</p>
+            <h4><a href="">Application security Testing</a></h4>
+            <p>Uncover Hidden Vulnerabilities in Your Web & Android Applications</p>
           </div>
         </div>
 
@@ -506,9 +505,9 @@
           </div>
         </div>
       </div>
-
     </div>
-  </section><!-- End Services Section -->
+  </section> -->
+  <!-- End Services Section -->
 
   <!-- ======= Portfolio Section ======= -->
   <section id="cert" class="portfolio">
@@ -1062,18 +1061,17 @@
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://www.twitter.com/vral_parmar" class="twitter"><i class="icofont-twitter"></i></a>
-              <a href="https://www.facebook.com/parmar.viral.37" class="facebook"><i class="icofont-facebook"></i></a>
               <a href="https://www.instagram.com/vral_parmar" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/viralparmar93/" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/vral-parmar/" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://www.quora.com/profile/Viral-Parmar-25" class="blogger"><i class="icofont-blogger"></i></a>
             </div>
           </div>
         </div>
-
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>parmarviral93@gmail.com</p>
+            <p><a href="mailto:vral_parmar@pm.me">vral_parmar</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
