--- a/index.html
+++ b/index.html
@@ -1039,14 +1039,11 @@
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
     <div class="container">
-
       <div class="section-title">
         <h2>Contact</h2>
         <p>Contact Me</p>
       </div>
-
       <div class="row mt-2">
-
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
@@ -1054,7 +1051,6 @@
             <p>Bhavnagar, Gujarat, India</p>
           </div>
         </div>
-
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
@@ -1067,7 +1063,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+        <div class="col mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
@@ -1077,11 +1073,9 @@
       </div>
     </div>
   </section><!-- End Contact Section -->
-
   <div class="credits">
     Crafted by <a href="https://vral-parmar.github.io/vral_parmar">Viral Parmar</a>
   </div>
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
