--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,22 @@
         <div class="col mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
-            <h3>Email Me</h3>
+            <h3>Email Me to get you free attack surface report</h3>
+            <h5>This is a free one time service and wait for atleast 15 day after sending an email.</h5>
+            <p>Protect your organization from cyber threats with a free, automated analysis of your external attack surface.</p>
+            <p>
+              <ul>
+                <li><b>Benefits Section:</b></li>
+                <li>Uncover hidden risks: "Our free attack surface assessment service scans your internet-facing assets to identify potential vulnerabilities attackers might exploit."</li>
+                <li>Prioritize remediation: "The report prioritizes vulnerabilities based on severity, allowing you to focus on the most critical issues first."</li>
+                <li>Gain valuable insights: "Learn about your overall attack surface complexity and potential attack vectors used by malicious actors."</li>
+                <li>No obligation: "This free service requires no commitment from you. Gain valuable insights before deciding on further action."</li>
+                <li><b>Important Notice Before Scanning:</b></li>
+                <li>Performing an attack surface scan simulates potential attacker behavior. Ensure you have explicit permission to scan the domain you submit. Scanning a domain without authorization may violate terms of service or even be illegal.
+                  By using this service, you confirm you have the necessary permissions to scan the provided domain.</li>
+                  <li>To process your free attack surface assessment, please submit a valid email address associated with the domain you wish to scan</li>
+              </ul>
+            </p>
             <p><a href="mailto:vral_parmar@pm.me">vral_parmar</a></p>
           </div>
         </div>
