added free services

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
             <i class="bx bx-envelope"></i>
             <div>
             <h3>Email Me to get your organization attack surface report Free</h3>
-            <h5>This is a free one time service and wait for atleast 15 day after sending an email.</h5>
+            <h3>This is a free one time service and wait for atleast 15 day after sending an email.</h3>
           </div>
             <p>
               <ul>
@@ -1083,7 +1083,7 @@
                 <li>To process your free attack surface assessment, please submit a valid email address associated with the domain you wish to scan</li>                
               </ul>
             </p>
-            <p>Please send email to: <a href="mailto:vral_parmar@pm.me">Send an email for free attack surface report</a></p>
+            <p>Please send email to: <a href="mailto:vral_parmar@pm.me">for free attack surface report</a></p>
           </div>
         </div>
       </div>
