--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BTech - CSE with Specialized in CyberSecurity</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:parmarviral93@gmail.com">Parmarviral93@gmail.com</a></li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:vral_parmar@pm.me">vral_parmar@pm.me</a></li>
               </ul>
             </div>
           </div>
