--- a/index.html
+++ b/index.html
@@ -111,38 +111,7 @@
       <div class="row skills-content">
 
         <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">Vulnerability Assessment<i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Penetration Testing <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Application security testing <i class="val">75%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Cloud/Server Configuration audit <i class="val">45%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
+        <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=30270" style='border:none;'></iframe>  
 
         </div>
 
@@ -163,23 +132,6 @@
               </div>
             </div>
           </div>
-
-          <div class="progress">
-            <span class="skill">Network Penetration testing <i class="val">88%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Red Team Engagement <i class="val">60%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
         </div>
 
       </div>
