--- a/index.html
+++ b/index.html
@@ -111,26 +111,23 @@
       <div class="row skills-content">
 
         <div class="col-lg-6">
-        <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=30270" style='border:none;'></iframe>  
+        <div class="progress">
+            <span class="skill">CTF</span>
+          </div>
 
+           <div class="progress">
+            <span class="skill">Configuration audit</span>
+          </div>
         </div>
 
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Linux and Shell <i class="val">80%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
+            <span class="skill">Linux and Shell</span>
           </div>
 
           <div class="progress">
-            <span class="skill">Risk Assessment <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
+            <span class="skill">Risk Assessment</span>
           </div>
         </div>
 
