--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Security Engineer</h3>
           <p class="font-italic">
-            Highly motivated Security professional with 4+ years of experience, exceeding expectations by slashing vulnerabilities by 90% across system, server and network. Deliver high-quality security assessments and actionable recommendations, boasting a 98% success rate in improving system security and efficiency. This relentless pursuit of knowledge extends to bug hunting and security research, where I contribute to a safer digital landscape by uncovering previously unknown weaknesses.
+            A highly motivated cybersecurity professional with over 4 years of experience, consistently exceeding expectations by reducing vulnerabilities by 90% across systems, servers, and networks. Proficient in delivering comprehensive security assessments and actionable recommendations, achieving a 98% success rate in enhancing system security and operational efficiency. Driven by a relentless pursuit of excellence, I actively contribute to the cybersecurity field through bug hunting and security research, uncovering previously unidentified weaknesses to promote a safer digital ecosystem.
           </p>
           <div class="row">
             <div class="col-lg-6">
