--- a/index.html
+++ b/index.html
@@ -449,6 +449,54 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
+            <img src="img/Cert/Plab.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>RECON CERTIFICATE</h4>
+              <p>PentesterLab</p>
+              <div class="portfolio-links">
+                <a href="img/Cert/Plab.png" data-gall="portfolioGallery" class="venobox"
+                  title="RECON CERTIFICATE"><i class="bx bx-plus"></i></a>
+                <a href="#" target="_blank"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="img/Cert/THM-SE.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Security Engineer</h4>
+              <p>TryHackMe</p>
+              <div class="portfolio-links">
+                <a href="img/Cert/THM-SE.png" data-gall="portfolioGallery" class="venobox"
+                  title="TryHackMe"><i class="bx bx-plus"></i></a>
+                <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-RSD8YEUOLS.pdf" target="_blank"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="img/Cert/THM-ADVC.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Advent of Cyber 2024</h4>
+              <p>TryHackMe</p>
+              <div class="portfolio-links">
+                <a href="img/Cert/THM-ADVC.png" data-gall="portfolioGallery" class="venobox"
+                  title="TryHackMe"><i class="bx bx-plus"></i></a>
+                <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-ZZV0DOXLAF.pdf" target="_blank"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
             <img src="img/Cert/IBM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>IBM Cyber Security Professional</h4>
