--- a/index.html
+++ b/index.html
@@ -497,6 +497,22 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
+            <img src="img/Cert/cjmap.PNG" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Certified Mobile App Pen Tester</h4>
+              <p>Mobile App sec</p>
+              <div class="portfolio-links">
+                <a href="img/Cert/cjmap.PNG" data-gall="portfolioGallery" class="venobox"
+                  title="Mobile App sec"><i class="bx bx-plus"></i></a>
+                <a href="#" target="_blank"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
             <img src="img/Cert/IBM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>IBM Cyber Security Professional</h4>
