--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Security Engineer</h3>
           <p class="font-italic">
-            A highly motivated cybersecurity professional with over 4 years of experience, consistently exceeding expectations by reducing vulnerabilities by 90% across systems, servers, and networks. Proficient in delivering comprehensive security assessments and actionable recommendations, achieving a 98% success rate in enhancing system security and operational efficiency. Driven by a relentless pursuit of excellence, I actively contribute to the cybersecurity field through bug hunting and security research, uncovering previously unidentified weaknesses to promote a safer digital ecosystem.
+            A highly motivated cybersecurity professional with over 4+ years of experience, consistently exceeding expectations by reducing vulnerabilities by 90% across systems, servers, and networks. Proficient in delivering comprehensive security assessments and actionable recommendations, achieving a 98% success rate in enhancing system security and operational efficiency. Driven by a relentless pursuit of excellence, I actively contribute to the cybersecurity field through bug hunting and security research, uncovering previously unidentified weaknesses to promote a safer digital ecosystem.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -203,13 +203,25 @@
             <h4>BTech - CSE with Specialized in CyberSecurity</h4>
             <h5>2018 - 2021</h5>
             <p><em>Rashtriya Raksha University, Gujarat, IN</em></p>
-            <p>My academic background is firmly rooted in cybersecurity, with a focus on information security, vulnerability assessment, and penetration testing (VAPT).  Through coursework and four major projects, I've gained a comprehensive understanding of cybersecurity principles and practical skills in identifying and exploiting vulnerabilities.</p>
+            <p>
+              <ul>
+                <li>Developed a strong foundation in cybersecurity through academic studies, with a focus on information security, vulnerability assessment, and penetration testing (VAPT).</li>
+                <li>Completed four major projects that honed practical skills in identifying and mitigating vulnerabilities, aligning with industry best practices.</li>
+                <li>Gained comprehensive knowledge of cybersecurity principles, including hands-on experience in vulnerability exploitation and assessment methodologies.</li>
+              </ul>
+            </p>
           </div>
           <div class="resume-item">
             <h4>Diploma in Computer Engineering</h4>
             <h5>2015 - 2018</h5>
             <p><em>Gujarat Technological University, Gujarat, IN</em></p>
-            <p>Focused on programming, computer fundamentals, networking, internet concepts, and completed two major projects.</p>
+            <p>
+              <ul>
+                <li>Gained expertise in programming, computer fundamentals, networking, internet concepts, and computer architecture through focused general studies.</li>
+                <li>Successfully completed two major projects demonstrating practical application of technical knowledge.</li>
+                <li>Developed a strong foundation in core computing principles and real-world problem-solving.</li>
+              </ul>
+            </p>
           </div>
           <h3 class="resume-title">Projects</h3>
           <div class="resume-item">
@@ -276,8 +288,20 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
+            <h4>CyberSecurity Engineer</h4>
+            <h5>Jun 2024 - Present</h5>
+            <p><em>Jaipur, RJ, IN </em></p>
+            <p>
+              <ul>
+                <li>Proactively safeguard company assets and products by mitigating risks, threats, and vulnerabilities through comprehensive security planning, implementation, and management.</li>
+                <li>Monitor and respond to security incidents, conduct vulnerability assessments and penetration testing to identify and address system weaknesses, and ensure compliance with established security standards and best practices.</li>
+                <li>Collaborate on change management processes, troubleshoot security and network issues, and effectively communicate findings through detailed security reporting to relevant stakeholders.</li>
+              </ul>
+            </p>
+          </div>          
+          <div class="resume-item">
             <h4>CyberSecurity Execuive</h4>
-            <h5>Jul 2021 - Present</h5>
+            <h5>Jul 2021 - May 2024</h5>
             <p><em>TCG Digital Solutions, Kolkata, WB, IN </em></p>
             <p>
               <ul>
@@ -359,13 +383,6 @@
             <ul>
               <li><a href="https://github.com/vral-parmar/Wireless-Information-Grabber-of-card" target="_blank">Wireless
                   Card Information Grabber - Linux</a></li>
-            </ul>
-          </div>
-          <div class="resume-item">
-            <h4>Data Mining</h4>
-            <ul>
-              <li><a href="https://github.com/vral-parmar/Data-Mining-Data-Sets-CSV" target="_blank">Data Mining
-                  Datasets - CSV</a></li>
             </ul>
           </div>
           <div class="resume-item">
